--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+!/src/main/resources/hibernate.cfg.xml
