--- a/src/main/resources/hibernate.cfg.xml.template
+++ b/src/main/resources/hibernate.cfg.xml.template
@@ -1,8 +1,7 @@
 <hibernate-configuration xmlns="http://www.hibernate.org/xsd/orm/cfg">
     <session-factory>
         <property name="connection.driver_class">com.mysql.cj.jdbc.Driver</property>
-        <property name="connection.url">jdbc:mysql://localhost:3306/Project1
-        </property>
+        <property name="connection.url">jdbc:mysql://localhost:3306/Project1</property>
         <property name="connection.username"></property>
         <property name="connection.password"></property>
         <property name="dialect">org.hibernate.dialect.MySQL8Dialect</property>
