JUnit tests for EmployeeDAO

--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
 </project>
