--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-!/src/main/resources/hibernate.cfg.xml
-!/src/test/resources/hibernate.cfg.xml
+/src/test/resources/hibernate.cfg.xml
+/src/main/resources/hibernate.cfg.xml
