--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,5 +45,15 @@
         <url-pattern>/SubmissionsAllServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>NewSubmissionServlet</servlet-name>
+        <servlet-class>com.revature.Classes.NewSubmissionServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>NewSubmissionServlet</servlet-name>
+        <url-pattern>/NewSubmissionServlet</url-pattern>
+    </servlet-mapping>
+
 
 </web-app>
